variables.Variables.scala.code
var step: Int = 0
var doneStep: Int = 0
while (! isOverBaggle()) 
{
  forward()
  step = step + 1
}
pickUpBaggle()
while (doneStep != step )
{backward()
doneStep = doneStep + 1}
dropBaggle()